force-app/main/default/objects/JIT_Country_Attribute_Mapping__mdt/JIT_Country_Attribute_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>JIT Country Attribute Mapping</label>
    <pluralLabel>JIT Country Attribute Mappings</pluralLabel>
</CustomObject>