force-app/main/default/objects/JIT_Country_Attribute_Mapping__mdt/fields/LanguageLocaleKey__c.field-meta.xml
<CustomField>
    <fullName>LanguageLocaleKey__c</fullName>
    <label>LanguageLocaleKey</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>af</fullName>
                <default>true</default>
                <label>af</label>
            </value>
            <value>
                <fullName>am</fullName>
            </value>
            <value>
                <fullName>ar</fullName>
            </value>
            <value>
                <fullName>ar_AE</fullName>
            </value>
            <value>
                <fullName>ar_BH</fullName>
            </value>
            <value>
                <fullName>ar_DZ</fullName>
            </value>
            <value>
                <fullName>ar_EG</fullName>
            </value>
            <value>
                <fullName>ar_IQ</fullName>
            </value>
            <value>
                <fullName>ar_JO</fullName>
            </value>
            <value>
                <fullName>ar_KW</fullName>
            </value>
            <value>
                <fullName>ar_LB</fullName>
            </value>
            <value>
                <fullName>ar_LY</fullName>
            </value>
            <value>
                <fullName>ar_MA</fullName>
            </value>
            <value>
                <fullName>ar_OM</fullName>
            </value>
            <value>
                <fullName>ar_QA</fullName>
            </value>
            <value>
                <fullName>ar_SA</fullName>
            </value>
            <value>
                <fullName>ar_SD</fullName>
            </value>
            <value>
                <fullName>ar_SY</fullName>
            </value>
            <value>
                <fullName>ar_TN</fullName>
            </value>
            <value>
                <fullName>ar_YE</fullName>
            </value>
            <value>
                <fullName>bg</fullName>
            </value>
            <value>
                <fullName>bn</fullName>
            </value>
            <value>
                <fullName>bs</fullName>
            </value>
            <value>
                <fullName>ca</fullName>
            </value>
            <value>
                <fullName>cs</fullName>
            </value>
            <value>
                <fullName>cy</fullName>
            </value>
            <value>
                <fullName>da</fullName>
            </value>
            <value>
                <fullName>de</fullName>
            </value>
            <value>
                <fullName>de_AT</fullName>
            </value>
            <value>
                <fullName>de_BE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>