force-app/main/default/objects/JIT_Country_Attribute_Mapping__mdt/fields/LocaleSidKey__c.field-meta.xml
<CustomField>
    <fullName>LocaleSidKey__c</fullName>
    <label>LocaleSidKey</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>af_ZA</fullName>
                <default>true</default>
                <label>af_ZA</label>
            </value>
            <value>
                <fullName>ar_AE</fullName>
            </value>
            <value>
                <fullName>ar_BH</fullName>
            </value>
            <value>
                <fullName>ar_DZ</fullName>
            </value>
            <value>
                <fullName>ar_EG</fullName>
            </value>
            <value>
                <fullName>ar_IQ</fullName>
            </value>
            <value>
                <fullName>ar_JO</fullName>
            </value>
            <value>
                <fullName>ar_KW</fullName>
            </value>
            <value>
                <fullName>ar_LB</fullName>
            </value>
            <value>
                <fullName>ar_LY</fullName>
            </value>
            <value>
                <fullName>ar_MA</fullName>
            </value>
            <value>
                <fullName>ar_OM</fullName>
            </value>
            <value>
                <fullName>ar_QA</fullName>
            </value>
            <value>
                <fullName>ar_SA</fullName>
            </value>
            <value>
                <fullName>ar_SD</fullName>
            </value>
            <value>
                <fullName>ar_SY</fullName>
            </value>
            <value>
                <fullName>ar_TN</fullName>
            </value>
            <value>
                <fullName>ar_YE</fullName>
            </value>
            <value>
                <fullName>az_AZ</fullName>
            </value>
            <value>
                <fullName>be_BY</fullName>
            </value>
            <value>
                <fullName>bg_BG</fullName>
            </value>
            <value>
                <fullName>bn_BD</fullName>
            </value>
            <value>
                <fullName>bn_IN</fullName>
            </value>
            <value>
                <fullName>bs_BA</fullName>
            </value>
            <value>
                <fullName>ca_ES</fullName>
            </value>
            <value>
                <fullName>cs_CZ</fullName>
            </value>
            <value>
                <fullName>cy_GB</fullName>
            </value>
            <value>
                <fullName>da_DK</fullName>
            </value>
            <value>
                <fullName>de_AT</fullName>
            </value>
            <value>
                <fullName>de_BE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>