force-app/main/default/objects/JIT_Country_Attribute_Mapping__mdt/fields/TimeZoneSidKey__c.field-meta.xml
<CustomField>
    <fullName>TimeZoneSidKey__c</fullName>
    <label>TimeZoneSidKey</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Africa/Algiers</fullName>
                <default>true</default>
                <label>Africa/Algiers</label>
            </value>
            <value>
                <fullName>Africa/Cairo</fullName>
            </value>
            <value>
                <fullName>Africa/Johannesburg</fullName>
            </value>
            <value>
                <fullName>Africa/Nairobi</fullName>
            </value>
            <value>
                <fullName>America/Anchorage</fullName>
            </value>
            <value>
                <fullName>America/Argentina/Buenos_Aires</fullName>
            </value>
            <value>
                <fullName>America/Bogota</fullName>
            </value>
            <value>
                <fullName>America/Caracas</fullName>
            </value>
            <value>
                <fullName>America/Chicago</fullName>
            </value>
            <value>
                <fullName>America/Denver</fullName>
            </value>
            <value>
                <fullName>America/El_Salvador</fullName>
            </value>
            <value>
                <fullName>America/Halifax</fullName>
            </value>
            <value>
                <fullName>America/Indiana/Indianapolis</fullName>
            </value>
            <value>
                <fullName>America/Lima</fullName>
            </value>
            <value>
                <fullName>America/Los_Angeles</fullName>
            </value>
            <value>
                <fullName>America/Mexico_City</fullName>
            </value>
            <value>
                <fullName>America/New_York</fullName>
            </value>
            <value>
                <fullName>America/Panama</fullName>
            </value>
            <value>
                <fullName>America/Phoenix</fullName>
            </value>
            <value>
                <fullName>America/Puerto_Rico</fullName>
            </value>
            <value>
                <fullName>America/Santiago</fullName>
            </value>
            <value>
                <fullName>America/Sao_Paulo</fullName>
            </value>
            <value>
                <fullName>America/St_Johns</fullName>
            </value>
            <value>
                <fullName>America/Tijuana</fullName>
            </value>
            <value>
                <fullName>Asia/Baghdad</fullName>
            </value>
            <value>
                <fullName>Asia/Bangkok</fullName>
            </value>
            <value>
                <fullName>Asia/Colombo</fullName>
            </value>
            <value>
                <fullName>Asia/Dhaka</fullName>
            </value>
            <value>
                <fullName>Asia/Dubai</fullName>
            </value>
            <value>
                <fullName>Asia/Ho_Chi_Minh</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>